--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,102 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Roboto Mono", serif;
+  width: 100%;
+  height: 100vh;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  background-color: rgb(231, 231, 231);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+#root {
+  width: 70%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+.container_1 {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(231, 231, 231);
+  width: 100%;
+  padding: 20px;
+}
+
+input {
+  height: 45px;
+  width: 379px;
+  border: black 2px solid;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 17px;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  height: 45px;
+  width: 115px;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+  font-size: 17px;
+  border: 2px solid black;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-radius: 5px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.container_1_1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.loadingScreen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(231, 231, 231);
+  position: absolute;
+  top: -100%;
+  transition: all ease-in-out 1s;
+}
+
+.loadingScreen.active {
+  top: 0;
+}
+
+.loadingIcon{
+  animation: loadingrotate 1s infinite;
+}
+@keyframes loadingrotate {
+  from{
+    transform: rotate(0);
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+  to{
+    transform: rotate(360deg);
   }
 }
+/* @media screen and (max-width: 600px) {
+  #root {
+    width: 100%;
+  }
+  .container_1 {
+    width: 100%;
+  }
+  input {
+    width: 100%;
+  }
+  button {
+    width: 20%;
+  }
+} */
