--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,7 +79,7 @@ button {
   gap: 10px;
 }
 
-.container_1_2_2 {
+.container_1_2_2 {;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -148,9 +148,51 @@ button {
   top: 0;
 }
 
+.citynotfound {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(231, 231, 231);
+  position: absolute;
+  top: -100%;
+  transition: all ease-in-out 1s;
+  z-index: 1;
+}
+
+.citynotfound.active {
+  top: 0;
+}
+
 .loadingIcon {
   animation: loadingrotate 1s infinite;
 }
+
+.HistoryTable {
+  width: 98%;
+  border-collapse: collapse;
+  border: 1px solid black;
+  text-align: center;
+  margin: 2%;
+}
+
+td,
+th {
+  border: 1px solid black;
+  padding: 5px;
+}
+.container_1_2_3_1 {
+  width: 100%;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @keyframes loadingrotate {
   from {
     transform: rotate(0);
