--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,7 +79,7 @@ button {
   gap: 10px;
 }
 
-.container_1_2_2 {;
+.container_1_2_2 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -171,11 +171,9 @@ button {
 }
 
 .HistoryTable {
-  width: 98%;
+  width: 100%;
   border-collapse: collapse;
-  border: 1px solid black;
   text-align: center;
-  margin: 2%;
 }
 
 td,
@@ -184,13 +182,17 @@ th {
   padding: 5px;
 }
 .container_1_2_3_1 {
-  width: 100%;
+  width: 98%;
+  max-height: 290px;
   overflow-x: scroll;
   scrollbar-width: none;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid black;
+  padding: 0;
+  margin: 2%;
 }
 
 @keyframes loadingrotate {
