--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -139,7 +139,7 @@ button {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgb(231, 231, 231);
   position: absolute;
   top: -100%;
@@ -160,7 +160,7 @@ button {
   height: 100vh;
   background-color: rgb(231, 231, 231);
   position: absolute;
-  top: -100%;
+  top: -110%;
   transition: all ease-in-out 1s;
   z-index: 2;
 }
@@ -223,5 +223,30 @@ th {
 @media screen and (max-width: 600px) {
   #root {
     width: 100%;
+  }
+  input{
+    width: 100vh;
+  }
+  .container_1_2 {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .container_1 {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .container_1_1{
+    padding: 0 5px 0 5px;
+    width: 100%;
+  }
+  .container_1_2_1,
+  .container_1_2_2,
+  .container_1_2_3 {
+    width: 100%;
+  }
+  button{
+    padding: 12px;
   }
 }
