Add backend URL configuration and update fetch requests; improve toggle button width

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -201,7 +201,7 @@ th {
 .toggleButton {
   position: absolute;
   height: fit-content;
-  width: fit-content;
+  width: 35px;
   padding: 7px;
   right: 0;
   top: 0;
